home styling updated, fixed navbar when resizing now visible

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -33,7 +33,9 @@
   padding-left:20px;
   padding-bottom:10px;
   position: sticky; top: 0;
+  overflow: visible;
 }
+
 .gh {
   margin-right:20px;
 }
@@ -164,6 +166,8 @@
 .sec {
   float:left;
   position:relative;
+  flex-shrink: 0;
+  flex-flow: row wrap;
   }
 
 .spinner {
